--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,13 +16,8 @@
                             <i class="icon-list"></i> Projects <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li class=""><a href="https://github.com/gkwelding/WSDLInterpreter" title="take me to the WSDLInterpreter github page" target="_blank">WSDLInterpreter</a></li>
-                            <li class=""><a href="https://github.com/gkwelding/Scene7WSDLPHPWrapper" title="take me to the Scene7WSDLPHPWrapper github page" target="_blank">Adobe Scene7 WSDL PHP Wrapper</a></li>
-                            <li class=""><a href="https://github.com/gkwelding/GoogleMapsV3CI" title="take me to the Google Maps V3 API for CodeIgniter github page" target="_blank">Google Maps V3 API for CodeIgniter</a></li>
-                            <li class=""><a href="https://github.com/gkwelding/MailchimpAPICI" title="take me to the MailChimp API for CodeIgniter github page" target="_blank">MailChimp API for CodeIgniter</a></li>
-                            <li class=""><a href="https://github.com/gkwelding/FuelPHP-Social-Package" title="take em to the FuelPHP Social Package github page" target="_blank">FuelPHP Social Package</a></li>
-                            <li class=""><a href="https://github.com/gkwelding/Bugzilla-Command-Line-Stats" title="take em to the Bugzilla Command Line Stats github page" target="_blank">Bugzilla Command Line Stats</a></li>
-                            <li class=""><a href="https://github.com/gkwelding/ihelp" title="Make em to the iHelp jQuery Plugin github page" target="_blank">iHelp jQuery Plugin</a></li>
+                            <li class=""><a href="https://github.com/mark-greene/LearnToProgram" title="take me to the github page" target="_blank">Learn to Program chapter exercises</a></li>
+                            <li class=""><a href="https://github.com/mark-greene/intro-web-ruby" title="take me to the github page" target="_blank">Introduction to Ruby and Web Development course work</a></li>
                         </ul>
                     </li>
                     <li id="search" class="search hidden-phone hidden-tablet">
